:lipstick: Fix vh issue on ios safari

--- a/css/main.scss
+++ b/css/main.scss
@@ -225,14 +225,15 @@ text-black {
 }
 
 .iframe-parent {
-  height: calc(100vh - 64px);
+  height: calc(var(--vh, 1vh) * 100 - 64px); // see https://css-tricks.com/the-trick-to-viewport-units-on-mobile/
+  height: calc(100vh - 64px); // fallback
   border: none;
 }
 
 iframe {
   margin-top: 0; // fix position about navbar in ios safari
-  height: calc(100vh - 64px);
-  max-height: calc(100vh - 64px);
+  height: calc(var(--vh, 1vh) * 100 - 64px); // see https://css-tricks.com/the-trick-to-viewport-units-on-mobile/
+  height: calc(100vh - 64px); // fallback
   width: 100%;
   border: none;
 }
